Bug 93005 - Chart / Unable to save as .odc file
Summary: Chart / Unable to save as .odc file
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
4.3 all versions
Hardware: Other All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:6.3.0 target:6.2.0.1
Keywords: bibisected, regression
: 65175 92998 96617 (view as bug list)
Depends on:
Blocks: Chart
  Show dependency treegraph
 
Reported: 2015-07-29 16:51 UTC by raal
Modified: 2019-03-19 05:42 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
test file (16.47 KB, application/vnd.oasis.opendocument.presentation)
2015-07-29 16:51 UTC, raal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description raal 2015-07-29 16:51:39 UTC
Created attachment 117518 [details]
test file

steps:
 - open empty impress and insert chart (or open attachment)
 - double click on chart to edit
 - menu File- Save as
 - save  .odc file

Error message> Error saving the document broken-charts-forbug:
Wrong parameter.
The operation was started under an invalid parameter.

Version: 5.1.0.0.alpha1+
Build ID: 74d4168f8830f7bbec6b784c3fb774296d9adafa
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-07-22_06:14:00
Comment 1 Jean-Baptiste Faure 2015-07-29 20:40:39 UTC
Same problem with my own charts with LO 5.0.1.0+ build at home under Ubuntu 15.04 x86-64 with gcc 5.1.

Best regards. JBF
Comment 2 raal 2015-12-20 19:59:18 UTC
*** Bug 96617 has been marked as a duplicate of this bug. ***
Comment 3 raal 2015-12-21 13:31:05 UTC
Jean-Baptiste,
please retest with dev version, I cannot reproduce with Version: 5.1.0.0.alpha1+
Build ID: 8b5182155b6d35a1be64d37136584e30ea6a6ef8
Threads 4; Ver: Windows 6.1; Render: default;
Comment 4 Jean-Baptiste Faure 2015-12-22 12:40:37 UTC
(In reply to raal from comment #3)
> Jean-Baptiste,
> please retest with dev version, I cannot reproduce with Version:
> 5.1.0.0.alpha1+
> Build ID: 8b5182155b6d35a1be64d37136584e30ea6a6ef8
> Threads 4; Ver: Windows 6.1; Render: default;

Still reproducible for me with both
Version: 5.0.5.0.0+
Build ID: 01ef568cbc3f33092c1ed3f04afced7cb85badf3
and
Version: 5.1.0.1.0+
Build ID: c40c24e9ce333924952d6b1c643a4cc9a3f859af
under Ubuntu_15.10_x86-64

Best regards. JBF
Comment 5 Xisco Faulí 2016-09-12 12:18:37 UTC
Adding keyword 'bibisectRequest'.
Comment 6 Xisco Faulí 2016-09-18 22:26:53 UTC
*** Bug 96617 has been marked as a duplicate of this bug. ***
Comment 8 Aron Budea 2016-09-18 23:55:19 UTC
Note that in 4.4.0.3, when the chart could be saved, the reopened chart file appears empty. Bug 100611 is somewhat related.

4.0.0.3 saves the file as presentation.
Comment 9 Regina Henschel 2017-02-05 21:18:57 UTC
*** Bug 65175 has been marked as a duplicate of this bug. ***
Comment 10 Regina Henschel 2017-02-05 22:10:31 UTC
In Version: 5.4.0.0.alpha0+
Build-ID: 0cd819b68ced2a95a127a246c0558153fbdbcae2
CPU-Threads: 4; BS-Version: Windows 6.1; UI-Render: Standard; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2017-01-31_12:28:03
Gebietsschema: de-DE (de_DE); Calc: group
I see this behavior:

If I start LO and open my file, I can save the chart to a .odc file. But that changes the name of the file in the title bar too. Therefore I leave chart edit mode, go back to the sheet and save the file under a new name. If I now switch back to edit mode of the chart by double-click and again save the chart to a .odc file, I get the already mentioned error message "Fehler beim Speichern ... Falscher Parameter ..."

I can open the produced .odc file and see chart and data table, but I cannot use it as OLE. The data table is empty in the OLE.
Comment 11 QA Administrators 2018-06-15 02:46:15 UTC Comment hidden (obsolete)
Comment 12 Jean-Baptiste Faure 2018-06-17 09:48:51 UTC
Still reproducible with master built at home under Ubuntu 16.04 x86-64:
Version: 6.2.0.0.alpha0+
Build ID: 23fa8a6ed05386ce6e9997747b416279f46ddd5f
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk3; 
Ubuntu_16.04_x86-64
Locale: fr-FR (fr_FR.UTF-8); Calc: threaded

Best regards. JBF
Comment 13 Markus Mohrhard 2018-11-29 19:34:31 UTC
I'm going to remove the odc export feature. I had added the feature a few years back for debugging purpose, however I never had the time to finish the work.

Additionally, the feature causes way too many issues.
Comment 14 Commit Notification 2018-11-30 02:17:55 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/d543e8dfd3d8ae718e29304a155e1cf70d08325d%5E%21

tdf#93005, tdf#100611, remove the incomplete ODC export feature

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2018-11-30 19:04:42 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/4632afbd9ecdf85f3980b41fa9d58b6099aa2d81%5E%21

tdf#93005, tdf#100611, remove the incomplete ODC export feature

It will be available in 6.2.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Mike Kaganski 2019-03-19 05:42:53 UTC
*** Bug 92998 has been marked as a duplicate of this bug. ***