tdf#93005, tdf#100611, remove the incomplete ODC export feature

Change-Id: I96a3882cd412ea5d993971df7e20b1fd8da73642